--- a/pages/utilities.module.scss
+++ b/pages/utilities.module.scss
@@ -11,8 +11,11 @@
 }
 
 .pageInner {
-  // padding: 1rem;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+  border-top: 1px solid gray;
+  padding-top: 3rem;
+  width: 90%;
 }
