--- a/pages/widgets/compound-interest-chart.module.scss
+++ b/pages/widgets/compound-interest-chart.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  position: relative;
   height: 500px;
   width: 600px;
   background: #424242;
@@ -8,5 +9,15 @@
 
   text {
     fill: white !important;
+  }
+
+  p {
+    color: white;
+    font-family: sans-serif;
+    font-size: 20px;
+    display: block;
+    position: absolute;
+    font-weight: bold;
+    right: 2%;
   }
 }
