--- a/pages/utilities.module.scss
+++ b/pages/utilities.module.scss
@@ -14,8 +14,10 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   border-top: 1px solid gray;
+  padding: 5rem;
   padding-top: 3rem;
-  width: 90%;
+  padding-bottom: 0;
+  width: 100%;
 }
