--- a/pages/appledore/styles.module.scss
+++ b/pages/appledore/styles.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-flow: column nowrap;
   // align-items: center;
-  max-width: 800px;
+  max-width: 90vw;
   margin: auto;
   padding-top: 2rem;
   h1,
